--- a/README
+++ b/README
@@ -1,5 +1,13 @@
 Jin is a 2d game engine in C++ for simplifying game making 
-process. The engine use lua as script.
+process. The engine uses lua as script. 
+
+Screenshot
+--------
+http://hua128.org/jin/img/img_1.png
+http://hua128.org/jin/img/img_2.png
+http://hua128.org/jin/img/img_3.png
+http://hua128.org/jin/img/img_4.png
+http://hua128.org/jin/img/img_5.png
 
 Moduals
 --------
@@ -14,9 +22,23 @@ Purposes
 * 16bit audio callback, wrapped around the windows API
 * A very basic collision system (which I may or may not use)
 
-Requirement
---------
-SDL2
-
 Build
 --------
+Requirements: 
+    SDL2
+Linux: 
+    
+Windows: 
+
+MacOS: 
+    
+TODO 
+--------
+
+About
+--------
+Programming: chai(shu_chai@163.com)
+Art:         chai(shu_chai@163.com)
+
+
+
