--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Jin is a 2d game engine in C++ for simplifying game making 
-process. The engine uses lua as script. 
+Jin is a 2d game framework in C++ for simplifying game making 
+process. 
 
 Screenshot
 --------
